src/test/deca/syntax/valid/identificateur.deca
// Description:
//    tests de programme correct(essayer de voir les iden sont reconnu de  maniere generale).
//
// Resultats:
//    
//
// Historique:
//    cree le 04/01/2025
{
    int $jsp;
    int $;
    int l$;
    int _$;
    int $79;
}